Sat Aug 02 01:38:37 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	  - The account drop-down box now truncates an account name if it's
	    longer than 18 characters. I hate hard-coding this, but Qt is
	    just too messy to make me want to figure out another method that
	    works (not that I haven't tried). Suggestions are welcome.

Sat Aug 02 00:59:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	* src/QGaimAccountBox.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	* gaim.pro:
	  - Added an account combobox, and the initial UI of the Add Buddy
	    dialog.

Fri Aug 01 22:22:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	  - Fixed the text for the mail notification dialog.

Fri Aug 01 22:16:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	* src/main.cpp:
	* gaim.pro:
	  - Added the notification UI.

Fri Aug 01 21:25:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The protocol icon is now shown next to the username in the
	    active conversations drop-down menu.

Fri Aug 01 21:12:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added support for /me.

Fri Aug 01 20:48:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The entry widget is now word-wrapped.

Fri Aug 01 20:43:57 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Fixed Cae Bug #1, all the way from New Jersey! Gaim was sending
	    out a TYPED message even after sending a full message.

Fri Aug 01 20:18:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Outgoing typing notification is now supported.
